--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* General */
 :root {
+  --header-text-color: #34bbda;
   --background-color: #ffffff;
   --button-color: #c89afc;
   --text-color: #292925;
